--- a/diplom.bib
+++ b/diplom.bib
@@ -407,6 +407,20 @@
 	title = {Ajax}
 }
 
+%kathi
+@online{jdbc,
+	lastchecked = {2016-03-28},
+	url = {https://de.wikipedia.org/wiki/Java_Database_Connectivity},
+	title = {JDBC}
+}
+
+%kathi
+@online{jdbctutorial,
+	lastchecked = {2016-03-28},
+	url = {http://www.vogella.com/tutorials/MySQLJava/article.html},
+	title = {JDBC-Tutorial}
+}
+
 %chrisy
 @online{Vicon,
 	lastchecked = {2016-03-03},
